New experiment added

--- a/src/lab/Isolation_of_Chloroplast/content.html
+++ b/src/lab/Isolation_of_Chloroplast/content.html
@@ -55,8 +55,22 @@ edit --><!DOCTYPE html>
                     Simulator
                 </div>
                 <div class="content" id="experiment-article-section-4-content">
-                    <div class="divContent"><p><a href="../index.php?exp_id=Isolation_of_Chloroplast" target="_blank">
+                    <div class="divContent"><p><a href="experiment.html" target="_blank">
                         Click here for Simulator</a></p>
+                    </div>
+                </div>
+            </section>
+            <section id="experiment-article-section-4">
+                <div class="icon" id="experiment-article-section-4-icon">
+                    <!-- Enclose the icon image of your lab.-->
+                    <img src="../images/animation.jpg"/>
+                </div>
+                <div class="heading" id="experiment-article-section-4-heading">
+                    Animation
+                </div>
+                <div class="content" id="experiment-article-section-4-content">
+                    <div class="divContent"><p><a href="Isolation_of_Chloroplast.mp4" target="_blank">
+                        Click here for Animation</a></p>
                     </div>
                 </div>
             </section>
