--- a/src/lab/content.html
+++ b/src/lab/content.html
@@ -75,7 +75,7 @@ edit -->
                         <ul id="list-of-experiments">
                             <li>
                                 <!--Link and name of the experiment 1 -->
-                                <a href="Isolation_of_Chloroplast">Isolation of Chloroplast</a>
+                                <a href="Circular_Coil">Magnetic Field Along The Axis of A Circular Coil Carrying Current</a>
                             </li>
                         </ul>
                     </div>
