--- a/src/lab/Isolation_of_Chloroplast/content.html
+++ b/src/lab/Isolation_of_Chloroplast/content.html
@@ -44,33 +44,27 @@ edit --><!DOCTYPE html>
         <!-- All the sections of your lab or experiment can be 
         enclosed together with a div element as shown below-->
         <div id="experiment-article-sections">
-            <!-- First section of the article-->
-            <!-- Second section of the article-->
-            <section id="experiment-article-section-4">
-                <div class="icon" id="experiment-article-section-4-icon">
-                    <!-- Enclose the icon image of your lab.-->
+            <section id="experiment-article-section-3">
+                <div class="icon" id="experiment-article-section-3-icon">
+                    <!-- Enclose the icon image of your lab. -->
                     <img src="../images/simulation.jpg"/>
                 </div>
-                <div class="heading" id="experiment-article-section-4-heading">
-                    Simulator
-                </div>
+                <div class="heading" id="experiment-article-section-4-heading">Simulator</div>
                 <div class="content" id="experiment-article-section-4-content">
-                    <div class="divContent"><p><a href="experiment.html" target="_blank">
-                        Click here for Simulator</a></p>
+                    <div class="divContent">
+                        <p><a href="experiment.html" target="_blank">Click here for Simulator</a></p>
                     </div>
                 </div>
             </section>
-            <section id="experiment-article-section-4">
-                <div class="icon" id="experiment-article-section-4-icon">
+            <section id="experiment-article-section-6">
+                <div class="icon" id="experiment-article-section-6-icon">
                     <!-- Enclose the icon image of your lab.-->
                     <img src="../images/animation.jpg"/>
                 </div>
-                <div class="heading" id="experiment-article-section-4-heading">
-                    Animation
-                </div>
+                <div class="heading" id="experiment-article-section-6-heading">Animation</div>
                 <div class="content" id="experiment-article-section-4-content">
-                    <div class="divContent"><p><a href="Isolation_of_Chloroplast.mp4" target="_blank">
-                        Click here for Animation</a></p>
+                    <div class="divContent">
+                        <p><a href="" target="_blank">Click here for Animation</a></p>
                     </div>
                 </div>
             </section>
