--- a/src/lab/Isolation_of_Chloroplast/experiment.html
+++ b/src/lab/Isolation_of_Chloroplast/experiment.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
 <head>
     <title></title>
     <meta charset="utf-8">
@@ -8,11 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel='stylesheet' href='../template/assets/css/fonts.googleapis.css'>
-    <link rel="stylesheet" href="../template/bower_components/angular-material/angular-material.css" />
-    <link rel="stylesheet" href="../template/assets/css/app.css" />
-    <link rel="stylesheet" href="css/experiment.css" />
-    <script src="../template/js/createjs-2015.05.21.min.js"></script>
+    <link rel="stylesheet" href="../template/bower_components/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="../template/assets/css/app.css"/>
+    <link rel="stylesheet" href="css/experiment.css"/>
+    <script src="../template/js/createjs-2013.12.12.min.js"></script>
     <script src="../template/js/easeljs-0.7.0.min.js"></script>
+    <script src="../template/js/canvasjs.min.js"></script>          
     <script src="../template/bower_components/angular/angular.min.js"></script>
     <script src="../template/bower_components/angular-animate/angular-animate.js"></script>
     <script src="../template/bower_components/angular-aria/angular-aria.js"></script>
@@ -23,17 +23,17 @@
     <script src="./src/UserController.js"></script>
     <script src="./src/experiment.js"></script>
     <script type="text/javascript">
-        angular
-            .module('starterApp', ['ngMaterial', 'users'])
-            .config(function($mdThemingProvider, $mdIconProvider) {
-                $mdIconProvider
-                    .icon("menu", "../template/assets/svg/menu.svg", 24)
-                    .icon("fullscreen", "../template/assets/icons/Icon3.svg", 24)
-                    .icon("help", "../template/assets/icons/Icon2.svg", 24);
-                $mdThemingProvider.theme('default')
-                    .primaryPalette('blue')
-                    .accentPalette('red');
-            });
+    angular
+    .module('starterApp', ['ngMaterial','users'])
+    .config(function($mdThemingProvider, $mdIconProvider){
+        $mdIconProvider
+            .icon("menu"       , "../template/assets/svg/menu.svg"        , 24)
+            .icon("fullscreen"       , "../template/assets/icons/Icon3.svg", 24)
+            .icon("help"      , "../template/assets/icons/Icon2.svg", 24);
+            $mdThemingProvider.theme('default')
+                .primaryPalette('blue')
+                .accentPalette('red');
+    });
     </script>
 </head>
 
