--- a/src/lab/Isolation_of_Chloroplast/experiment.html
+++ b/src/lab/Isolation_of_Chloroplast/experiment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
     <title></title>
     <meta charset="utf-8">
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="../template/bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="../template/assets/css/app.css" />
     <link rel="stylesheet" href="css/experiment.css" />
-    <script src="../template/js/createjs-2013.12.12.min.js"></script>
+    <script src="../template/js/createjs-2015.05.21.min.js"></script>
     <script src="../template/js/easeljs-0.7.0.min.js"></script>
     <script src="../template/bower_components/angular/angular.min.js"></script>
     <script src="../template/bower_components/angular-animate/angular-animate.js"></script>
@@ -22,17 +23,17 @@
     <script src="./src/UserController.js"></script>
     <script src="./src/experiment.js"></script>
     <script type="text/javascript">
-      angular
-      .module('starterApp', ['ngMaterial','users'])
-      .config(function($mdThemingProvider, $mdIconProvider){
-        $mdIconProvider
-            .icon("menu"       , "../template/assets/svg/menu.svg"        , 24)
-            .icon("fullscreen"       , "../template/assets/icons/Icon3.svg", 24)
-            .icon("help"      , "../template/assets/icons/Icon2.svg", 24);
-            $mdThemingProvider.theme('default')
-                .primaryPalette('blue')
-                .accentPalette('red');
-    });
+        angular
+            .module('starterApp', ['ngMaterial', 'users'])
+            .config(function($mdThemingProvider, $mdIconProvider) {
+                $mdIconProvider
+                    .icon("menu", "../template/assets/svg/menu.svg", 24)
+                    .icon("fullscreen", "../template/assets/icons/Icon3.svg", 24)
+                    .icon("help", "../template/assets/icons/Icon2.svg", 24);
+                $mdThemingProvider.theme('default')
+                    .primaryPalette('blue')
+                    .accentPalette('red');
+            });
     </script>
 </head>
 
@@ -60,23 +61,32 @@
 
     <md-sidenav class="site-sidenav md-sidenav-left" md-component-id="right" md-is-locked-open="$mdMedia('gt-sm')" md-swipe-left="toggleSidenav()">
       <div>  
-          <md-button id="variables" class="md-raised md-primary toolbarbutton subTitle" ng-click="toggle1()">{{variables}}<span aria-hidden="true">
+          <md-button id="variables" class="md-raised md-primary toolbarbutton subTitle" ng-click="toggle1()">{{instructions}}<span aria-hidden="true">
               <md-icon md-svg-src="md-toggle-arrow"  aria-hidden="true" ng-animate="{enter: 'rotate', leave: 'rotateCounterwise'}" ng-class="{true: 'rotate', false: 'rotateCounterwise'}[isActive1]" ></md-icon>
               </span> 
           </md-button> 
-        <div ng-hide="showVariables" class="div">
-             
-           <section layout="row" layout-align="center center">
+    <div ng-hide="showVariables" class="div">
+          <md-content class="md-title selectable" ng-model="insructions1" layout-padding id="id_insructions1">{{insructions1}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions2" layout-padding id="id_insructions2">{{insructions2}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions3" layout-padding id="id_insructions3">{{insructions3}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions4" layout-padding id="id_insructions4">{{insructions4}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions5" layout-padding id="id_insructions4">{{insructions5}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions6" layout-padding id="id_insructions4">{{insructions6}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions7" layout-padding id="id_insructions4">{{insructions7}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions8" layout-padding id="id_insructions4">{{insructions8}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions9" layout-padding id="id_insructions4">{{insructions9}}</md-content>
+          <md-content class="md-title selectable" ng-model="insructions10" layout-padding id="id_insructions4">{{insructions10}}</md-content>
+        </div>
+        <md-button id="measurement" class="md-raised md-primary toolbarbutton subTitle" ng-click="toggle()">{{variables}} 
+                    <span aria-hidden="true">
+                    <md-icon md-svg-src="md-toggle-arrow"   aria-hidden="true" ng-animate="{enter: 'rotate', leave: 'rotateCounterwise'}" ng-class="{true: 'rotate', false: 'rotateCounterwise'}[isActive]" ></md-icon>
+                    </span>
+                </md-button>
+            <div ng-hide="showValue" class="div">
+                <section layout="row" layout-align="center center">
                 <md-button ng-disabled="control_disable" class="md-raised" id="reset" ng-click="resetBtn();" >{{reset}}</md-button>
            </section> 
-
-
-        </div> 
-
-          <md-button id="result" class="md-raised md-primary toolbarbutton subTitle" ng-click="toggle()">{{result}} <span aria-hidden="true">
-            <md-icon md-svg-src="md-toggle-arrow"   aria-hidden="true" ng-animate="{enter: 'rotate', leave: 'rotateCounterwise'}" ng-class="{true: 'rotate', false: 'rotateCounterwise'}[isActive]" ></md-icon>
-            </span> 
-          </md-button>
+          </div>
       </div>
   </md-sidenav>
 </md-content>
