--- a/src/lab/Isolation_of_Chloroplast/content.html
+++ b/src/lab/Isolation_of_Chloroplast/content.html
@@ -17,7 +17,7 @@ edit --><!DOCTYPE html>
 <!-- Write the name of your lab and link it to the home 
       page of your lab (h1 tag is preferred while writing your 
       lab name)-->
-<a href="../index.html">Electricity & Magnetism Virtual Lab</a>
+<a href="../index.html">Cell biology Virtual Lab I</a>
 </div>
 <!-- Add any additional element you want to add to the lab 
     header, For example : Help (Enclosing them with suitable 
@@ -31,7 +31,7 @@ edit --><!DOCTYPE html>
     footer-->
 <div class="breadcrumb" id="experiment-article-breadcrumb">
 </div>
-<header class="heading" id="experiment-article-heading">Magnetic Field Along The Axis of A Circular Coil Carrying Current</header>
+<header class="heading" id="experiment-article-heading">Isolation of Chloroplast</header>
 <!-- Navigation menu is useful to organize the view of 
       multiple sections inside the article-->
 <nav class="default" id="experiment-article-navigation">
