--- a/src/lab/content.html
+++ b/src/lab/content.html
@@ -85,6 +85,27 @@ edit -->
                                 <!--Link and name of the experiment 3 -->
                                 <a href="Cell_Organization_and_Sub_Cellular_Structure_Studies">Cell Organization and Sub Cellular Structure Studies</a>
                             </li>
+							 <li>
+                                <!--Link and name of the experiment 4 -->
+                                <a href="Isolation_of_Mitochondria">Isolation of Mitochondria</a>
+                            </li>
+								 <li>
+                                <!--Link and name of the experiment 5 -->
+                                <a href="Transfection">Transfection</a>
+                            </li>
+								 <li>
+                                <!--Link and name of the experiment 6 -->
+                                <a href="Basics_of_Plant_Tissue_Culture">Basics of Plant Tissue Culture</a>
+                            </li>
+									 <li>
+                                <!--Link and name of the experiment 7 -->
+                                <a href="Glucose_Uptake_Assay">Glucose Uptake Assay</a>
+                            </li>
+									 <li>
+                                <!--Link and name of the experiment 8 -->
+                                <a href="Isolation_of_Endoplasmic_Reticulum">Isolation of Endoplasmic Reticulum</a>
+                            </li>
+							
                         </ul>
                     </div>
                 </section>
