--- a/src/lab/Basics_of_Plant_Tissue_Culture/content.html
+++ b/src/lab/Basics_of_Plant_Tissue_Culture/content.html
@@ -57,7 +57,7 @@ edit --><!DOCTYPE html>
     <div class="heading" id="experiment-article-section-6-heading">
               Animation
     </div>
-    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/x4d22hQa4WU" target="_blank">Click here for Animation</a></p></div></div>
+    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/nggKp10f6kA" target="_blank">Click here for Animation</a></p></div></div>
 </section>
 </div>
 </article>
