--- a/src/lab/Glucose_Uptake_Assay/content.html
+++ b/src/lab/Glucose_Uptake_Assay/content.html
@@ -57,7 +57,7 @@ edit --><!DOCTYPE html>
     <div class="heading" id="experiment-article-section-6-heading">
               Animation
     </div>
-    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/arp5eld3pDk" target="_blank">Click here for Animation</a></p></div></div>
+    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/WAfwJOEo9uQ" target="_blank">Click here for Animation</a></p></div></div>
 </section>
 </div>
 </article>
