--- a/src/lab/Isolation_of_Endoplasmic_Reticulum/content.html
+++ b/src/lab/Isolation_of_Endoplasmic_Reticulum/content.html
@@ -57,7 +57,7 @@ edit --><!DOCTYPE html>
     <div class="heading" id="experiment-article-section-6-heading">
               Animation
     </div>
-    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/fUuYU9bQnXA" target="_blank">Click here for Animation</a></p></div></div>
+    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/nGQd9TF6Isk" target="_blank">Click here for Animation</a></p></div></div>
 </section>
 </div>
 </article>
