--- a/src/lab/Light_Microscope/content.html
+++ b/src/lab/Light_Microscope/content.html
@@ -67,7 +67,7 @@ edit --><!DOCTYPE html>
     <div class="heading" id="experiment-article-section-6-heading">
               Animation
     </div>
-    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/R2qKtWdm6yI" target="_blank">Click here for Animation</a></p></div></div>
+    <div class="content" id="experiment-article-section-6-content"><div class="divContent"><p><a href="https://youtu.be/ePoGUV7EFTU" target="_blank">Click here for Animation</a></p></div></div>
 </section>
 </div>
 </article>
