--- a/src/lab/Isolation_of_Chloroplast/experiment.html
+++ b/src/lab/Isolation_of_Chloroplast/experiment.html
@@ -26,9 +26,9 @@
         .module('starterApp', ['ngMaterial','users'])
         .config(function($mdThemingProvider, $mdIconProvider){
             $mdIconProvider
-            .icon("menu"       , "../common/assets/svg/menu.svg"        , 24)
-            .icon("fullscreen"       , "../common/assets/icons/Icon3.svg", 24)
-            .icon("help"      , "../common/assets/icons/Icon2.svg", 24);
+            .icon("menu"       , "../template/assets/svg/menu.svg"        , 24)
+            .icon("fullscreen"       , "../template/assets/icons/Icon3.svg", 24)
+            .icon("help"      , "../template/assets/icons/Icon2.svg", 24);
             $mdThemingProvider.theme('default')
                 .primaryPalette('blue')
                 .accentPalette('red');
